package com.ap2.replocker.report_collection.access_request;

/**
 * @author Dave AKN
 * @version 1.0
 */
public enum RequestStatus {
    PENDING,
    ACCEPTED,
    REJECTED,
}
